# libfacet

./: CMakeLists.txt  Readme  facet.cfg.in  facet.pc.in
debian/: README.Debian  README.source  changelog  control  copyright  libfacet-doc.doc-base  libfacet-doc.install  libfacet.doc-base.EX  libfacet2.2.install  rules
doc/: CMakeLists.txt  Doxyfile  doxyfile.in
src/: CMakeLists.txt  FastMatchTemplate.cpp  FastMatchTemplate.h.in  components.cpp  face_regions.cpp  facet.cpp  facet.h.in  image_processing.cpp
